--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -36,6 +36,7 @@ h2 {
     margin-top: 20px;
     margin-right: 30px;
     color: #696969;
+    font-size: 14px;
 }
 #insert-form #button:hover, #toSelect:hover, #toInsert:hover {
     background-color: #696969;
@@ -59,33 +60,30 @@ h2 {
     border-radius: 4px;
     width: 15%;
     height: 30px;
+    font-size: 14px;
 }
 /*Select table*/
 table {
-    text-align: center;
+    width: 60% !important;
     margin: auto;
-    padding: 5px;
     margin-top: 100px;
     margin-bottom: 100px;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     font-family: sans-serif;
+    border-radius: 20px !important;
 }
 th {
-    padding: 10px;
-    color: gray;
+    border: none !important;
+    padding: 10px !important;
     background-color: white;
 }
 a {
-    text-decoration: none;
-    color: gray;
+    text-decoration: none !important;
+    color: gray !important;
 }
 tr {
-    border-radius: 15px;
-    background-color: lightgray;
+    background-color: lightgray !important;
 }
 td {
-    padding: 15px;
+    padding: 10px !important;
     color: #696969;
 }
